<resources>
    <string name="app_name">weather</string>
    <string name="city_change">切换城市</string>
    <string name="custom_sun_view_str_sunrise">日出 %1$s</string>
    <string name="custom_sun_view_str_sunset">日落 %1$s</string>
    <string name="weather_hour_forecast">逐时预报</string>
    <string name="weather_week_forecast">一周预报</string>
    <string name="wind_and_humidity">风和湿度</string>
    <string name="activity_home_str_pm25">PM2.5[细颗粒物]</string>
    <string name="activity_home_str_pm10">PM10[可吸入颗粒物]</string>
    <string name="activity_home_str_so2">SO2[二氧化硫]</string>
    <string name="activity_home_str_no2">NO2[二氧化氮]</string>

    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果</string>
    <string name="select_city">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="located_again">重新定位</string>
    <string name="activity_home_refresh_time">%1$s 更新</string>
    <string name="activity_home_type_and_real_feel_temp">%1$s | 风速 %2$s°</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
